fix: LTIAttempts add course routing data
