# backend/app/models/lti_attempt_model.go
@@ -17,6 +17,10 @@ type LTIAttemptSecret struct {
 type LTIAttemptListItem struct {
 	Base
 	LTIAttemptBase
+	UserEmail      string `json:"user_email"`
+	UserName       string `json:"user_name"`
+	PNETServerName string `json:"pnet_server_name"`
+	LTIRoutingName string `json:"lti_routing_name"`
 }
 
 // TableName переопределяет название таблицы для LTIAttemptListItem на `lti_attempts`
@@ -28,4 +32,12 @@ type LTIAttempt struct {
 	Base
 	LTIAttemptBase
 	LTIAttemptSecret
+}
+
+func (l *LTIAttempt) ExtendExpiredAt(extensionHours int) {
+	// Проверяем, осталось ли до окончания сессии меньше часа
+	if time.Until(l.ExpiredAt) < time.Hour {
+		// Продлеваем сессию на указанное количество часов
+		l.ExpiredAt = l.ExpiredAt.Add(time.Duration(extensionHours) * time.Hour)
+	}
 }
