# backend/docs/swagger.json
@@ -101,7 +101,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Edit lti_attempt.",
+                "description": "Edit lti_attempt. Roles: [admin, instructor]",
                 "consumes": [
                     "application/json"
                 ],
@@ -179,7 +179,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "List lti_attempt.",
+                "description": "List lti_attempt. Roles: [admin, instructor]",
                 "consumes": [
                     "application/json"
                 ],
@@ -1916,14 +1916,26 @@
                 "lti_routing_id": {
                     "type": "integer"
                 },
+                "lti_routing_name": {
+                    "type": "string"
+                },
                 "pnet_server_id": {
                     "type": "integer"
+                },
+                "pnet_server_name": {
+                    "type": "string"
                 },
                 "updated_at": {
                     "type": "string"
                 },
+                "user_email": {
+                    "type": "string"
+                },
                 "user_id": {
                     "type": "integer"
+                },
+                "user_name": {
+                    "type": "string"
                 }
             }
         },
@@ -2035,13 +2047,20 @@
                 "is_default": {
                     "type": "boolean"
                 },
+                "lti_course_id": {
+                    "type": "string"
+                },
                 "lti_description": {
                     "type": "string"
                 },
                 "lti_params_task": {
                     "type": "string"
                 },
+                "lti_sub_id": {
+                    "type": "string"
+                },
                 "lti_task_id": {
+                    "description": "Автоматические",
                     "type": "string"
                 },
                 "lti_title": {
@@ -2562,28 +2581,17 @@
         "usecases.LTIAttemptEditInputDTO": {
             "type": "object",
             "required": [
-                "name",
-                "token",
-                "url"
+                "expired_at"
             ],
             "properties": {
+                "expired_at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
-                "is_active": {
-                    "type": "boolean"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "token": {
-                    "type": "string"
-                },
-                "unit_rate": {
+                "pnet_server_id": {
                     "type": "integer"
-                },
-                "url": {
-                    "type": "string"
                 }
             }
         },
@@ -2656,16 +2664,18 @@
                 "offset": {
                     "type": "integer"
                 },
-                "search": {
-                    "type": "string"
+                "user_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 }
             }
         },
         "usecases.LTIAttemptListOutputDTO": {
             "type": "object",
             "required": [
-                "model",
-                "total_count"
+                "model"
             ],
             "properties": {
                 "model": {
@@ -2673,9 +2683,6 @@
                     "items": {
                         "$ref": "#/definitions/models.LTIAttemptListItem"
                     }
-                },
-                "total_count": {
-                    "type": "integer"
                 }
             }
         },
@@ -2913,10 +2920,16 @@
                 "is_default": {
                     "type": "boolean"
                 },
+                "lti_course_id": {
+                    "type": "string"
+                },
                 "lti_description": {
                     "type": "string"
                 },
                 "lti_params_task": {
+                    "type": "string"
+                },
+                "lti_sub_id": {
                     "type": "string"
                 },
                 "lti_task_id": {
